--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -2,21 +2,67 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>My Tweets</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Home - My Portfolio</title>
 </head>
 <body>
+  <header>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="tweets.html">Tweets</a></li>
+    </ul>
+  </header>
+  
+  <main>
+    <article>
+      <!-- Your content for the Home page goes here -->
+      <h1>Welcome to My Portfolio</h1>
+      <p>This is where I showcase my work!</p>
+    </article>
+    
+    <aside>
+      <p>Placeholder to add comment thread later</p>
+    </aside>
+  </main>
 
-  <h1>Recent Tweets</h1>
+  <footer>
+    <p>Made by Your Name - <a href="https://yourlink.com" target="_blank">here</a></p>
+  </footer>
+</body>
+</html>
+4. Example of the Updated tweets.html:
+html
+Copy
+Edit
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tweets - My Portfolio</title>
+</head>
+<body>
+  <header>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="tweets.html">Tweets</a></li>
+    </ul>
+  </header>
+  
+  <main>
+    <article>
+      <!-- Your content for the Tweets page goes here -->
+      <h1>Latest Tweets</h1>
+      <p>Here are some of my latest tweets...</p>
+    </article>
+    
+    <aside>
+      <p>Placeholder to add comment thread later</p>
+    </aside>
+  </main>
 
-  <!-- Embedded Tweet -->
-  <blockquote class="twitter-tweet">
-    <p lang="en" dir="ltr">I’m so excited to be part of the ALX Software Engineering Program! 🚀<br><br>#Tech #Learning #ALXSE</p>
-    &mdash; Example User (@exampleuser) 
-    <a href="https://twitter.com/exampleuser/status/1234567890123456789">January 1, 2025</a>
-  </blockquote> 
-  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-
-  <p><a href="index.html">← Back to Homepage</a></p>
-
+  <footer>
+    <p>Made by Your Name - <a href="https://yourlink.com" target="_blank">here</a></p>
+  </footer>
 </body>
 </html>
