--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -1,27 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>My Portfolio Homepage</title>
-</head>
+<html>
 <body>
+  <header>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="tweets.html">Tweets</a></li>
+    </ul>
+  </header>
+  
+  <main>
+    <article>
+      <!-- Main content goes here (texts, links, images, tweets, etc.) -->
+    </article>
+    
+    <aside>
+      <p>Placeholder to add comment thread later</p>
+    </aside>
+  </main>
 
-  <h1>Welcome to My Portfolio</h1>
-
-  <h2>About Me</h2>
-  <p>I am a passionate learner enrolled in the ALX Software Engineering Program.</p>
-
-  <h3>My Interests</h3>
-  <p>I enjoy building web applications, solving algorithms, and exploring new technologies.</p>
-
-  <p>Outside of tech, I love photography, reading, and volunteering in my community.</p>
-
-  <p>This is just the beginning of my journey. Thank you for visiting!</p>
-
-  <!-- Clickable image -->
-  <a href="https://www.alxafrica.com/" target="_blank">
-    <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200">
-  </a>
-
+  <footer>
+    <p>Made by Your Name - <a href="https://yourlink.com" target="_blank">here</a></p>
+  </footer>
 </body>
 </html>
