--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -1,24 +1,37 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Page Title</title>
+</head>
 <body>
-  <header>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="tweets.html">Tweets</a></li>
-    </ul>
-  </header>
-  
-  <main>
-    <article>
-      <!-- Main content goes here (texts, links, images, tweets, etc.) -->
-    </article>
-    
-    <aside>
-      <p>Placeholder to add comment thread later</p>
-    </aside>
-  </main>
+    <!-- Header -->
+    <header>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="tweets.html">Tweets</a></li>
+        </ul>
+    </header>
 
-  <footer>
-    <p>Made by Your Name - <a href="https://yourlink.com" target="_blank">here</a></p>
-  </footer>
+    <!-- Main content -->
+    <main>
+        <!-- Article: Content of the page -->
+        <article>
+            <!-- Your existing content goes here -->
+            <h1>Welcome to My Website</h1>
+            <p>Some introductory content.</p>
+        </article>
+
+        <!-- Aside: Comment thread placeholder -->
+        <aside>
+            <p>placeholder to add comment thread later</p>
+        </aside>
+    </main>
+
+    <!-- Footer -->
+    <footer>
+        <p>Made by Your Name - <a href="<any link>" target="_blank">here</a></p>
+    </footer>
 </body>
 </html>
