--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -1,68 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home - My Portfolio</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Page Title</title>
 </head>
 <body>
-  <header>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="tweets.html">Tweets</a></li>
-    </ul>
-  </header>
-  
-  <main>
-    <article>
-      <!-- Your content for the Home page goes here -->
-      <h1>Welcome to My Portfolio</h1>
-      <p>This is where I showcase my work!</p>
-    </article>
-    
-    <aside>
-      <p>Placeholder to add comment thread later</p>
-    </aside>
-  </main>
+    <!-- Header -->
+    <header>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="tweets.html">Tweets</a></li>
+        </ul>
+    </header>
 
-  <footer>
-    <p>Made by Your Name - <a href="https://yourlink.com" target="_blank">here</a></p>
-  </footer>
-</body>
-</html>
-4. Example of the Updated tweets.html:
-html
-Copy
-Edit
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tweets - My Portfolio</title>
-</head>
-<body>
-  <header>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="tweets.html">Tweets</a></li>
-    </ul>
-  </header>
-  
-  <main>
-    <article>
-      <!-- Your content for the Tweets page goes here -->
-      <h1>Latest Tweets</h1>
-      <p>Here are some of my latest tweets...</p>
-    </article>
-    
-    <aside>
-      <p>Placeholder to add comment thread later</p>
-    </aside>
-  </main>
+    <!-- Main content -->
+    <main>
+        <!-- Article: Content of the page -->
+        <article>
+            <!-- Your existing content goes here -->
+            <h1>Welcome to My Website</h1>
+            <p>Some introductory content.</p>
+        </article>
 
-  <footer>
-    <p>Made by Your Name - <a href="https://yourlink.com" target="_blank">here</a></p>
-  </footer>
+        <!-- Aside: Comment thread placeholder -->
+        <aside>
+            <p>placeholder to add comment thread later</p>
+        </aside>
+    </main>
+
+    <!-- Footer -->
+    <footer>
+        <p>Made by Your Name - <a href="<any link>" target="_blank">here</a></p>
+    </footer>
 </body>
 </html>
