--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page Title</title>
+    <title>Tweets Page</title>
 </head>
 <body>
-    <!-- Header -->
     <header>
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -14,22 +13,28 @@
         </ul>
     </header>
 
-    <!-- Main content -->
     <main>
-        <!-- Article: Content of the page -->
         <article>
-            <!-- Your existing content goes here -->
-            <h1>Welcome to My Website</h1>
-            <p>Some introductory content.</p>
+            <!-- Embedded Tweet -->
+            <blockquote class="twitter-tweet">
+                <p lang="en" dir="ltr">
+                    This is an embedded tweet! 
+                    <a href="https://twitter.com/user/status/1234567890">January 1, 2025</a>
+                </p>
+                &mdash; User Name (@username) 
+                <a href="https://twitter.com/username/status/1234567890">January 1, 2025</a>
+            </blockquote>
+            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+            <!-- Your existing content -->
+            <p>Here are some tweets from the internet.</p>
         </article>
 
-        <!-- Aside: Comment thread placeholder -->
         <aside>
             <p>placeholder to add comment thread later</p>
         </aside>
     </main>
 
-    <!-- Footer -->
     <footer>
         <p>Made by Your Name - <a href="<any link>" target="_blank">here</a></p>
     </footer>
