--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page Title</title>
+    <title>Home</title>
 </head>
 <body>
-    <!-- Header -->
     <header>
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -14,22 +13,60 @@
         </ul>
     </header>
 
-    <!-- Main content -->
     <main>
-        <!-- Article: Content of the page -->
         <article>
-            <!-- Your existing content goes here -->
+            <!-- Existing content -->
             <h1>Welcome to My Website</h1>
             <p>Some introductory content.</p>
+
+            <!-- Learners Table -->
+            <div class="learners-table-container">
+                <table border="1">
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Age</th>
+                            <th>Country</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>John</td>
+                            <td>25</td>
+                            <td>USA</td>
+                        </tr>
+                        <tr>
+                            <td>Emily</td>
+                            <td>28</td>
+                            <td>Canada</td>
+                        </tr>
+                        <tr>
+                            <td>Michael</td>
+                            <td>32</td>
+                            <td>Australia</td>
+                        </tr>
+                        <tr>
+                            <td>Sophia</td>
+                            <td>21</td>
+                            <td>UK</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <!-- End of Learners Table -->
+
         </article>
 
-        <!-- Aside: Comment thread placeholder -->
         <aside>
             <p>placeholder to add comment thread later</p>
         </aside>
     </main>
 
-    <!-- Footer -->
+    <footer>
+        <p>Made by Your Name - <a href="<any link>" target="_blank">here</a></p>
+    </footer>
+</body>
+</html>
     <footer>
         <p>Made by Your Name - <a href="<any link>" target="_blank">here</a></p>
     </footer>
