--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -1,74 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>John Doe - Personal Portfolio</title>
+    <style>
+        /* Simple CSS for basic layout */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #4CAF50;
+            color: white;
+            text-align: center;
+            padding: 20px 0;
+        }
+        nav ul {
+            list-style: none;
+            text-align: center;
+            margin: 0;
+            padding: 0;
+        }
+        nav ul li {
+            display: inline;
+            margin-right: 20px;
+        }
+        nav ul li a {
+            color: white;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        section {
+            padding: 20px;
+            margin: 20px 0;
+        }
+        article.project {
+            border: 1px solid #ccc;
+            margin-bottom: 20px;
+            padding: 10px;
+            background-color: #f9f9f9;
+        }
+        footer {
+            text-align: center;
+            background-color: #333;
+            color: white;
+            padding: 10px 0;
+        }
+    </style>
 </head>
 <body>
+
+    <!-- Header Section -->
     <header>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="tweets.html">Tweets</a></li>
-        </ul>
+        <h1>John Doe</h1>
+        <p>Full-stack Developer | Problem Solver | Tech Enthusiast</p>
     </header>
 
-    <main>
-        <article>
-            <!-- Existing content -->
-            <h1>Welcome to My Website</h1>
-            <p>Some introductory content.</p>
+    <!-- Navigation Bar -->
+    <nav>
+        <ul>
+            <li><a href="#introduction">Introduction</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#about">About Me</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
 
-            <!-- Learners Table -->
-            <div class="learners-table-container">
-                <table border="1">
-                    <thead>
-                        <tr>
-                            <th>Name</th>
-                            <th>Age</th>
-                            <th>Country</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>John</td>
-                            <td>25</td>
-                            <td>USA</td>
-                        </tr>
-                        <tr>
-                            <td>Emily</td>
-                            <td>28</td>
-                            <td>Canada</td>
-                        </tr>
-                        <tr>
-                            <td>Michael</td>
-                            <td>32</td>
-                            <td>Australia</td>
-                        </tr>
-                        <tr>
-                            <td>Sophia</td>
-                            <td>21</td>
-                            <td>UK</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-            <!-- End of Learners Table -->
+    <!-- Introduction Section -->
+    <section id="introduction">
+        <h2>Introduction</h2>
+        <p>Hello, I'm John Doe, a passionate full-stack developer with a love for building scalable web applications. I have experience in both front-end and back-end technologies and am constantly learning new things to improve my skills.</p>
+    </section>
 
+    <!-- Projects Section -->
+    <section id="projects">
+        <h2>Projects</h2>
+        <article class="project">
+            <h3>Personal Portfolio Website</h3>
+            <p>A personal website to showcase my projects, skills, and contact information. Built using HTML, CSS, and JavaScript.</p>
+            <a href="https://github.com/JohnDoe/portfolio" target="_blank">View Project</a>
         </article>
+        <article class="project">
+            <h3>Weather App</h3>
+            <p>A weather forecasting app that uses OpenWeatherMap API to display real-time weather data. Built using React and Node.js.</p>
+            <a href="https://github.com/JohnDoe/weather-app" target="_blank">View Project</a>
+        </article>
+    </section>
 
-        <aside>
-            <p>placeholder to add comment thread later</p>
-        </aside>
-    </main>
+    <!-- About Me Section -->
+    <section id="about">
+        <h2>About Me</h2>
+        <p>I'm a software developer with a strong interest in full-stack development. I have experience with HTML, CSS, JavaScript, Node.js, and various frameworks such as React and Express. I also enjoy solving complex problems and optimizing code for performance.</p>
+        <ul>
+            <li>Languages: JavaScript, Python, Java</li>
+            <li>Technologies: React, Node.js, Express, MongoDB</li>
+            <li>Hobbies: Coding, gaming, hiking</li>
+        </ul>
+    </section>
 
+    <!-- Contact Section -->
+    <section id="contact">
+        <h2>Contact</h2>
+        <p>Feel free to reach out to me via email or through my social media profiles.</p>
+        <p>Email: <a href="mailto:john.doe@example.com">john.doe@example.com</a></p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/johndoe" target="_blank">john.doe</a></p>
+        <p>GitHub: <a href="https://github.com/JohnDoe" target="_blank">JohnDoe</a></p>
+    </section>
+
+    <!-- Footer Section -->
     <footer>
-        <p>Made by Your Name - <a href="<any link>" target="_blank">here</a></p>
+        <p>&copy; 2024 John Doe</p>
     </footer>
-</body>
-</html>
-    <footer>
-        <p>Made by Your Name - <a href="<any link>" target="_blank">here</a></p>
-    </footer>
+
 </body>
 </html>
