--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -1,117 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>John Doe - Personal Portfolio</title>
-    <style>
-        /* Simple CSS for basic layout */
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-        header {
-            background-color: #4CAF50;
-            color: white;
-            text-align: center;
-            padding: 20px 0;
-        }
-        nav ul {
-            list-style: none;
-            text-align: center;
-            margin: 0;
-            padding: 0;
-        }
-        nav ul li {
-            display: inline;
-            margin-right: 20px;
-        }
-        nav ul li a {
-            color: white;
-            text-decoration: none;
-            font-weight: bold;
-        }
-        section {
-            padding: 20px;
-            margin: 20px 0;
-        }
-        article.project {
-            border: 1px solid #ccc;
-            margin-bottom: 20px;
-            padding: 10px;
-            background-color: #f9f9f9;
-        }
-        footer {
-            text-align: center;
-            background-color: #333;
-            color: white;
-            padding: 10px 0;
-        }
-    </style>
+    <title>My Portfolio</title>
 </head>
 <body>
 
-    <!-- Header Section -->
+    <!-- Header with Navigation -->
     <header>
-        <h1>John Doe</h1>
-        <p>Full-stack Developer | Problem Solver | Tech Enthusiast</p>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="tweets.html">Tweets</a></li>
+        </ul>
     </header>
 
-    <!-- Navigation Bar -->
-    <nav>
-        <ul>
-            <li><a href="#introduction">Introduction</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#about">About Me</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
-
-    <!-- Introduction Section -->
-    <section id="introduction">
-        <h2>Introduction</h2>
-        <p>Hello, I'm John Doe, a passionate full-stack developer with a love for building scalable web applications. I have experience in both front-end and back-end technologies and am constantly learning new things to improve my skills.</p>
-    </section>
-
-    <!-- Projects Section -->
-    <section id="projects">
-        <h2>Projects</h2>
-        <article class="project">
-            <h3>Personal Portfolio Website</h3>
-            <p>A personal website to showcase my projects, skills, and contact information. Built using HTML, CSS, and JavaScript.</p>
-            <a href="https://github.com/JohnDoe/portfolio" target="_blank">View Project</a>
+    <!-- Main Content -->
+    <main>
+        <!-- Article: Content of the webpage -->
+        <article>
+            <h1>Welcome to My Portfolio</h1>
+            <p>This is the homepage where I showcase my work and projects.</p>
         </article>
-        <article class="project">
-            <h3>Weather App</h3>
-            <p>A weather forecasting app that uses OpenWeatherMap API to display real-time weather data. Built using React and Node.js.</p>
-            <a href="https://github.com/JohnDoe/weather-app" target="_blank">View Project</a>
-        </article>
-    </section>
 
-    <!-- About Me Section -->
-    <section id="about">
-        <h2>About Me</h2>
-        <p>I'm a software developer with a strong interest in full-stack development. I have experience with HTML, CSS, JavaScript, Node.js, and various frameworks such as React and Express. I also enjoy solving complex problems and optimizing code for performance.</p>
-        <ul>
-            <li>Languages: JavaScript, Python, Java</li>
-            <li>Technologies: React, Node.js, Express, MongoDB</li>
-            <li>Hobbies: Coding, gaming, hiking</li>
-        </ul>
-    </section>
+        <!-- Aside: Placeholder for comment thread -->
+        <aside>
+            <p>placeholder to add comment thread later</p>
+        </aside>
+    </main>
 
-    <!-- Contact Section -->
-    <section id="contact">
-        <h2>Contact</h2>
-        <p>Feel free to reach out to me via email or through my social media profiles.</p>
-        <p>Email: <a href="mailto:john.doe@example.com">john.doe@example.com</a></p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/johndoe" target="_blank">john.doe</a></p>
-        <p>GitHub: <a href="https://github.com/JohnDoe" target="_blank">JohnDoe</a></p>
-    </section>
-
-    <!-- Footer Section -->
+    <!-- Footer -->
     <footer>
-        <p>&copy; 2024 John Doe</p>
+        <p>Made by Your Name - <a href="<any-link>" target="_blank">here</a></p>
     </footer>
 
 </body>
