--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tweets Page</title>
+    <title>Tweets</title>
 </head>
 <body>
+
+    <!-- Header with Navigation -->
     <header>
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -13,30 +15,30 @@
         </ul>
     </header>
 
+    <!-- Main Content -->
     <main>
+        <!-- Article: Content of the webpage (Tweets) -->
         <article>
+            <h1>Latest Tweets</h1>
+            <p>Here are some of the latest tweets I’ve posted:</p>
             <!-- Embedded Tweet -->
             <blockquote class="twitter-tweet">
-                <p lang="en" dir="ltr">
-                    This is an embedded tweet! 
-                    <a href="https://twitter.com/user/status/1234567890">January 1, 2025</a>
-                </p>
-                &mdash; User Name (@username) 
-                <a href="https://twitter.com/username/status/1234567890">January 1, 2025</a>
+                <p lang="en" dir="ltr">This is an embedded tweet! <a href="https://twitter.com/user/status/1234567890">January 1, 2025</a></p>
+                &mdash; User Name (@username) <a href="https://twitter.com/username/status/1234567890">January 1, 2025</a>
             </blockquote>
             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-
-            <!-- Your existing content -->
-            <p>Here are some tweets from the internet.</p>
         </article>
 
+        <!-- Aside: Placeholder for comment thread -->
         <aside>
             <p>placeholder to add comment thread later</p>
         </aside>
     </main>
 
+    <!-- Footer -->
     <footer>
-        <p>Made by Your Name - <a href="<any link>" target="_blank">here</a></p>
+        <p>Made by Your Name - <a href="<any-link>" target="_blank">here</a></p>
     </footer>
+
 </body>
 </html>
