--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -21,6 +21,43 @@
         <article>
             <h1>Welcome to My Portfolio</h1>
             <p>This is the homepage where I showcase my work and projects.</p>
+
+            <!-- Table of Learners -->
+            <div class="learners-table-container">
+                <table border="1">
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Age</th>
+                            <th>Country</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>John</td>
+                            <td>25</td>
+                            <td>USA</td>
+                        </tr>
+                        <tr>
+                            <td>Emily</td>
+                            <td>28</td>
+                            <td>Canada</td>
+                        </tr>
+                        <tr>
+                            <td>Michael</td>
+                            <td>32</td>
+                            <td>Australia</td>
+                        </tr>
+                        <tr>
+                            <td>Sophia</td>
+                            <td>21</td>
+                            <td>UK</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <!-- End of Learners Table -->
+
         </article>
 
         <!-- Aside: Placeholder for comment thread -->
