--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,1 +1,132 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>John Doe - Personal Portfolio</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+
+        header {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 20px;
+        }
+
+        nav ul {
+            list-style: none;
+            padding: 0;
+            text-align: center;
+            background-color: #444;
+            margin: 0;
+        }
+
+        nav ul li {
+            display: inline;
+            margin: 0 15px;
+        }
+
+        nav ul li a {
+            color: white;
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        section {
+            padding: 20px;
+            margin: 20px 0;
+            background-color: #fff;
+            border-radius: 8px;
+        }
+
+        article.project {
+            margin-bottom: 20px;
+            padding: 15px;
+            background-color: #e2e2e2;
+            border-radius: 8px;
+        }
+
+        footer {
+            text-align: center;
+            background-color: #333;
+            color: white;
+            padding: 10px;
+        }
+    </style>
+</head>
+
+<body>
+
+    <!-- Header Section -->
+    <header>
+        <h1>John Doe</h1>
+        <p>Full-Stack Developer | Problem Solver | Tech Enthusiast</p>
+    </header>
+
+    <!-- Navigation Bar -->
+    <nav>
+        <ul>
+            <li><a href="#introduction">Introduction</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#about">About Me</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+
+    <!-- Introduction Section -->
+    <section id="introduction">
+        <h2>Introduction</h2>
+        <p>Hello, I'm John Doe, a passionate full-stack developer with a love for building scalable web applications. I have experience in both front-end and back-end technologies, and I'm constantly learning new things to improve my skills.</p>
+    </section>
+
+    <!-- Projects Section -->
+    <section id="projects">
+        <h2>Projects</h2>
+        <article class="project">
+            <h3>Personal Portfolio Website</h3>
+            <p>A personal website to showcase my projects, skills, and contact information. Built using HTML, CSS, and JavaScript.</p>
+            <a href="https://github.com/johndoe/portfolio" target="_blank">View Project</a>
+        </article>
+
+        <article class="project">
+            <h3>Weather App</h3>
+            <p>A weather forecasting app that uses OpenWeatherMap API to display real-time weather data. Built using React and Node.js.</p>
+            <a href="https://github.com/johndoe/weather-app" target="_blank">View Project</a>
+        </article>
+    </section>
+
+    <!-- About Me Section -->
+    <section id="about">
+        <h2>About Me</h2>
+        <p>I'm a software developer with a strong interest in full-stack development. I have experience with HTML, CSS, JavaScript, Node.js, and various frameworks such as React and Express. I also enjoy solving complex problems and optimizing code for performance.</p>
+        <ul>
+            <li>Languages: JavaScript, Python, Java</li>
+            <li>Technologies: React, Node.js, Express, MongoDB</li>
+            <li>Hobbies: Coding, gaming, hiking</li>
+        </ul>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact">
+        <h2>Contact</h2>
+        <p>Feel free to reach out to me via email or through my social media profiles.</p>
+        <p>Email: <a href="mailto:john.doe@example.com">john.doe@example.com</a></p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/johndoe" target="_blank">john.doe</a></p>
+        <p>GitHub: <a href="https://github.com/johndoe" target="_blank">JohnDoe</a></p>
+    </section>
+
+    <!-- Footer Section -->
+    <footer>
+        <p>&copy; 2024 John Doe</p>
+    </footer>
+
+</body>
+
+</html>
