--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -73,3 +73,50 @@
 
 </body>
 </html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Portfolio</title>
+</head>
+<body>
+
+    <!-- Header Section -->
+    <header>
+        <h1>John Doe's Portfolio</h1>
+        <p>Welcome to my personal portfolio where I showcase my skills, projects, and achievements!</p>
+    </header>
+
+    <!-- Main Content -->
+    <main>
+        <!-- First Heading and Paragraph -->
+        <h2>Introduction</h2>
+        <p>Hi, I'm John Doe, a passionate web developer. I specialize in front-end development with a strong foundation in JavaScript, HTML, and CSS.</p>
+
+        <!-- Second Heading and Paragraph -->
+        <h3>My Journey</h3>
+        <p>My journey into tech began with curiosity, and I quickly fell in love with web development. I've since worked on several exciting projects, both personal and professional.</p>
+
+        <!-- Third Heading and Paragraph -->
+        <h2>Skills & Expertise</h2>
+        <p>I have experience working with various technologies, including React, Node.js, and Python. My strengths lie in creating interactive, user-friendly web applications.</p>
+
+        <!-- Fourth Paragraph -->
+        <p>Outside of coding, I enjoy reading tech blogs, experimenting with new frameworks, and contributing to open-source projects.</p>
+
+        <!-- Clickable Image -->
+        <p>Here’s an image of my favorite tech logo:</p>
+        <a href="https://www.example.com" target="_blank">
+            <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200" />
+        </a>
+    </main>
+
+    <!-- Footer Section -->
+    <footer>
+        <p>&copy; 2024 John Doe</p>
+    </footer>
+
+</body>
+</html>
